<resources>
    <string name="app_name">Cotton Club</string>
    <string name="title_activity_base">Base</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Create Order</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Alter Request</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_order">Create Order</string>
    <string name="create_job_card">Create Job Card</string>
    <string name="admin">Admin</string>
    <string name="alter_request">Create Alter Request</string>
    <string name="view_job_card">View Job Card</string>
    <string name="view_order">View Order</string>
    <string name="date_time_of_generation_order"><![CDATA[Date & Time of Generating Order:]]></string>
    <string name="party_name">Party Name</string>
    <string name="select_brand">Select Brand</string>
    <string name="design_number">Design Number</string>
    <string name="order_number">Order Number</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="select_size">Select Size</string>
    <string name="please_enter_party_name">Please enter Party Name</string>
    <string name="please_enter_brand_name">Please select Brand Name</string>
    <string name="please_enter_design_number">Please enter Design Number</string>
    <string name="please_enter_order_number">Please enter Order Number</string>
    <string name="please_select_delivery_date">Please select Delivery Date</string>
    <string name="please_select_size">Please select size</string>
    <string name="ok">OK</string>
    <string name="order_created_successfully">Order Create Successfully!</string>
    <string name="quantity">Quantity</string>
    <string name="job_card_number">Job Card Number</string>
    <string name="fabric_type">Fabric Type</string>
    <string name="master_name">Master Name</string>
    <string name="fabric_consumed">Fabric Consumed</string>
    <string name="cutting_issue_date">Cutting Issue Date</string>
    <string name="please_enter_quantity">Please enter Quantity</string>
    <string name="please_enter_job_card_number">Please enter Job Card Number</string>
    <string name="please_enter_fabric_type">Plase enter Fabric Type</string>
    <string name="please_enter_fabric_consumed">Please enter Fabric consumed</string>
    <string name="please_enter_master_name">Please enter Master Name</string>
    <string name="please_enter_cutting_issue_date">Please enter Cutting Issue Date</string>
    <string name="job_card_created_successfully">Job Card created Successfully!</string>
    <string name="alter_quantity">Alter Quantity</string>
    <string name="create_alter_request">Create Alter Request</string>
    <string name="please_enter_alter_quantity">Please enter Alter Quantity</string>
    <string name="alter_request_created_successfully">Alter request created successfully!</string>
    <string name="view_alter_request">View Alter Request</string>
    <string name="colon">:</string>
    <string name="brand_name">Brand Name</string>
    <string name="date_time_of_generation_job_card"><![CDATA[Date & Time of Genrating Job Card:]]></string>
    <string name="share">Share</string>
    <string name="cotton_club_app">Cotton Club Application</string>
    <string name="menu_logout">Logout</string>
    <string name="please_enter_user_id">Please enter your User ID</string>
    <string name="login">Login</string>
    <string name="do_want_to_logout_from_application">Do you want to Logout from the Application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="view">View</string>
    <string name="more">More</string>
    <string name="create">Create</string>
    <string-array name="type">
        <item>Full sleeves</item>
        <item>Half sleeves</item>
    </string-array>
    <string name="sizes">Sizes</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="size_xxl">XXL</string>
    <string name="size_xxxl">XXXL</string>
    <string name="size_NB">NB</string>
    <string name="size_03">0/3</string>
    <string name="size_3_6">3/6</string>
    <string name="size_69">6/9</string>
    <string name="size_912">9/12</string>
    <string name="please_enter_valid_quantity_number">Please enter valid Quantity</string>
    <string name="no_of_pieces">No. of pieces</string>
    <string name="tot_no_pieces">Total No. of pieces</string>
    <string name="size_1">1</string>
    <string name="size_2">2</string>
    <string name="size_3">3</string>
    <string name="size_4">4</string>
    <string name="size_5">5</string>
    <string name="size_6">6</string>
    <string name="size_8">8</string>
    <string name="size_10">10</string>
    <string name="size_12">12</string>
    <string name="size_14">14</string>
    <string name="size_16">16</string>
    <string name="size_20">20</string>
    <string name="size_22">22</string>
    <string name="size_24">24</string>
    <string name="size_26">26</string>
    <string name="size_28">28</string>
    <string name="size_30">30</string>
    <string name="size_32">32</string>
    <string name="size_34">34</string>
    <string name="size_36">36</string>
    <string name="quantity_100">100</string>
    <string name="size_0">0</string>
    <string name="zero">0</string>
    <string name="please_select_type">Please select Type</string>
    <string name="boys_tee_8_6">8*6 Boys T-shirt</string>
    <string name="boys_tee_2_6">2*6 Boys T-shirt</string>
    <string name="girls_tee_20_36">20*36 GirlsTop</string>
    <string name="kmsb">1–5 Kids Magic Suit (Boys)</string>
    <string name="kmsg">16–24 Kids Magic Suit (Girls)</string>
    <string name="girls_romper">Girls Romper</string>
    <string name="boys_romper">Boys Romper</string>
    <string name="boys_top">Boys Top</string>
    <string name="frock">Frock</string>
    <string name="girls_top">Girls Top</string>
    <string name="girls_trouser">Girls Trouser</string>
    <string name="boys_night_suit">Boys Night Suit</string>
    <string name="girls_night_suit">Girls Night Suit</string>
    <string name="boys_trouser">Boys Trouser</string>
    <string name="baba_suit">Baba Suit</string>
    <string name="order_details">Order Details</string>
    <string name="design_type">Design Type</string>
    <string name="size_18">18</string>
    <string name="design_code">Design Code</string>
    <string name="party_name_list" />
    <string name="pant_2_6">2*6 Pant</string>
    <string name="pant_8_16">8*16 Pant</string>
    <string name="update_order">Update Order</string>
    <string name="order_updated_successfully">Order Updated Successfully</string>
    <string name="sort_by">Sort By</string>
    <string-array name="filter">
        <item>Party Name</item>
        <item>Order Number</item>
    </string-array>
    <string name="filter_by">Filter by</string>
    <string name="sub_filter">Sub Filter</string>
    <string name="failed_to_pick_image">Failed to pick Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="str_upload_profile_picture">Upload Profile Picture</string>
    <string name="run_without_interruption">This application requires permissions to run without interruption</string>
    <string name="permission_denied">Permission denied</string>
    <string name="if_you_reject_permission"><![CDATA[If you reject permission, you cannot use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="no_records">No Records found for this filter.</string>
    <string name="upload_photo">Upload Photo:</string>
    <string name="please_enter_upload_job_card">Please Upload Job Card</string>
    <string name="unit">Unit</string>
    <string name="meters">m(s)</string>
    <string name="kgs">Kg(s)</string>
    <string name="selectFabric">Select Fabric</string>
    <string name="please_select_fabric_unit">Please select Fabric Unit</string>
    <string name="update_job_Card">Update Job Card</string>
    <string name="select_parts">Select Parts</string>
    <string name="other_parts">Other Parts Details</string>
    <string-array name="parts">
        <item>Front</item>
        <item>Back</item>
        <item>Hatha</item>
        <item>Other</item>
    </string-array>
    <string name="alter_request_details">Alter Request Details</string>
    <string name="please_select_parts">Please select Parts</string>
    <string name="please_select_other_parts">Please enter other Parts Details</string>
    <string name="please_enter_total_no_pieces">Please enter Total Number of Pieces</string>
    <string name="update_alter_request">Update Alter Request</string>
    <string name="alter_request_updated_successfully">Alter Request Updated Successfully</string>
    <string name="do_you_want_to_exit_application">Do you want to exit the application?</string>
    <string name="logged_in_as">Logged In As: </string>
    <string name="user_id">User Id</string>
    <string name="cutting_in_charge_km"><b>Cutting In-charge</b> Kids Magic</string>
    <string name="cutting_in_charge_bb"><b>Cutting In-charge</b> Be Baby</string>
    <string name="cutting_in_charge_cb"><b>Cutting In-charge</b> Cotton Blue</string>
    <string name="production_manager_km"><b>Production Manager</b> Kids Magic</string>
    <string name="production_manager_bb"><b>Production Manager</b> Be Baby</string>
    <string name="production_manager_cb"><b>Production Manager</b> Cotton Blue</string>
    <string name="finishing_in_charge_km"><b>Finishing In Charge</b> Kids Magic</string>
    <string name="finishing_in_charge_bb"><b>Finishing In Charge</b> Be Baby</string>
    <string name="finishing_in_charge_cb"><b>Finishing In Charge</b> Cotton Blue</string>
    <string name="job_card_details">Job Card Details</string>
    <string name="item">Item</string>
    <string name="cutting_complete_date">Cutting Complete Date</string>
    <string name="wastage">Wastage</string>
    <string name="view_job_card_details">View Job Card Details</string>
    <string name="fabric_consumed_">Fabric Consumed:</string>
    <string name="fabric_code">Fabric Code</string>
    <string name="add_item">Add Item</string>
    <string name="please_enter_fabric_code">Please enter Fabric Code</string>
    <string name="please_enter_fabric_quantity">Please enter Fabric Quantity</string>
    <string name="please_enter_wastage_quantity">Please enter Wastage Quantity</string>
    <string name="job_card_updated_successfully">Job Card Updated Successfully</string>
    <string name="view_alter_request_details">View Alter Request Details</string>
    <string name="please_enter_cutting_complete_date">Please enter cutting complete date</string>
    <string name="please_enter_an_item">Please enter Fabric consumed Item</string>
    <string name="sinker">Sinker</string>
    <string name="interlock">Interlock</string>
    <string name="ldh_fab_plain">LDH FAB(Plain)</string>
    <string name="date_time_of_generation_request"><![CDATA[Date & Time of Generating Request]]></string>
    <string name="please_enter_employee_name">Please Enter Employee Name</string>
</resources>