<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/create_item"
        android:title="Create">
        <menu>

            <item
                android:id="@+id/nav_create_order"
                android:icon="@drawable/ic_create_order"
                android:title="@string/create_order" />
            <item
                android:id="@+id/nav_job_card"
                android:icon="@drawable/ic_job_card"
                android:title="@string/create_job_card" />
            <item
                android:id="@+id/nav_alter_request"
                android:icon="@drawable/ic_alter_request"
                android:title="@string/alter_request" />
        </menu>
    </item>


    <item
        android:id="@+id/view_item"
        android:title="View">
        <menu>
            <item
                android:id="@+id/nav_view_order"
                android:icon="@drawable/ic_view_order"
                android:title="@string/view_order" />
            <item
                android:id="@+id/nav_view_job_card"
                android:icon="@drawable/ic_view_job_card"
                android:title="@string/view_job_card" />
        </menu>
    </item>

</menu>
