<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cottonclub.fragments.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_order"
        android:name="com.cottonclub.fragments.ui.create_order.CreateOrderFragment"
        android:label="@string/create_order"
        tools:layout="@layout/fragment_create_order" />

    <fragment
        android:id="@+id/nav_job_card"
        android:name="com.cottonclub.fragments.ui.create_job_card.CreateJobCardFragment"
        android:label="@string/create_job_card"
        tools:layout="@layout/fragment_create_job_card" />

    <fragment
        android:id="@+id/nav_alter_request"
        android:name="com.cottonclub.fragments.ui.alter_request.CreateAlterRequestFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_alter_request" />

    <fragment
        android:id="@+id/nav_view_order"
        android:name="com.cottonclub.fragments.ui.view_order.ViewOrderFragment"
        android:label="@string/view_order"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/nav_view_job_card"
        android:name="com.cottonclub.fragments.ui.view_job_card.ViewJobCardFragment"
        android:label="@string/view_job_card"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/nav_view_alter_request"
        android:name="com.cottonclub.fragments.ui.view_alter_request.ViewAlterRequestFragment"
        android:label="@string/view_alter_request"
        tools:layout="@layout/fragment_view_order" />
</navigation>